# PokemonSImulator

./: .gitignore  AGENTS.md  CMakeLists.txt  Introduction.md  Makefile  README.md  RESUME.md  Target.md  conversation.txt  event_new.jsonl  events_2026-07-06.jsonl  report.md  start-cluster.ps1  start.bat  start.ps1  start.sh  stop.ps1
.claude/: settings.json
BData/: 2026-04_gen91v1-0.json  2026-04_gen91v1-1500.json  2026-04_gen91v1-1630.json  2026-04_gen91v1-1760.json  2026-05_gen91v1-0.json  2026-05_gen91v1-1500.json  2026-05_gen91v1-1630.json  2026-05_gen91v1-1760.json
api-server/: __init__.py  analytics_service.py  battle_importer.py  bridge_service.py  config.py  main.py  sql_analytics.py  sql_analytics_recent.py  standalone_server.py
api-server/services/: __init__.py  db.py  hdfs_client.py  kafka_service.py  pyspark_bridge.py  redis_client.py
battle_logs/input/: 1_input_0.json  1_input_1.json  1_input_11.json  1_input_16.json  2_input_1.json  2_input_10.json  2_input_12.json  2_input_14.json  2_input_15.json  2_input_6.json  2_input_8.json  side_a.json  side_b.json
battle_logs/output/: output_0.json  output_1.json  output_10.json  output_11.json  output_12.json  output_13.json  output_14.json  output_15.json  output_16.json  output_17.json  output_18.json  output_19.json  output_2.json  output_3.json  output_4.json  output_5.json  output_6.json  output_7.json  output_8.json  output_9.json
cache/input/: 1_input_3.json  1_input_4.json  1_input_5.json  1_input_6.json  1_input_7.json  1_input_8.json  1_input_9.json  2_input_4.json  2_input_5.json  2_input_6.json  2_input_7.json  2_input_8.json  2_input_9.json  init_request.json
cache/output/: output_0.json  output_1.json  output_2.json  output_3.json  output_4.json  output_5.json
data/: learnsets.json  output.db  output.db-shm  output.db-wal  output_recent.db  pokemon.db-shm  pokemon.db-wal  schema.sql  species.json
doc/: 实习报告.md
docker/: .env.example  docker-compose.dev.yml  docker-compose.yml
docker/api-server/: Dockerfile  requirements.txt
docker/battle-engine/: Dockerfile  entrypoint.sh
docker/hadoop/: Dockerfile  entrypoint.sh
docker/init/: init-postgres.sql
docker/kafka/: init-topics.sh
docker/nginx/: nginx.conf
docker/scripts/: init-postgres.sql
docker/spark/: submit.sh
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
include/IO/: BattleSession.h  GameDatabase.h  LearnsetData.h
include/battle/: Abilities.h  Battle.h  Field.h  GameRegistry.h  Items.h  MoveBlockChecks.h  Moves.h
include/server/: HttpServer.h
nginx/: nginx.conf  pokemon.conf
scripts/: build_icon_sheet.py  build_item_sheet.py  build_spritesheet.py  check_dups.sh  check_gaps.py  clear_data.sh  demo_battle.py  download_sprites.py  empty_output.db  events_to_db.py  events_to_kafka.py  find_h2h.sh  find_matchups.py  gen_battle_data.py  gen_battle_stream.py  gen_defense_doc.py  gen_report.py  gen_test_battles.py  import_battles.py  init_db_vm.py  migrate_json_to_sqlite.py  migrate_output_db.py  pack.sh  prefetch_learnsets.py  reset_all.sh  restart.sh  run_analysis.sh  seed_db.py  setup-server.sh  setup_recent_db.py  start-cluster.sh  start-vm.sh  wsl_portforward.bat
scripts/deploy/: install-hadoop.sh  install-kafka.sh  install-redis.sh  install-spark.sh  install-zookeeper.sh
scripts/init/: create_kafka_topics.sh
scripts/migrate/: json_to_parquet.py
spark-jobs/analytics/: __init__.py  battle_analytics.py  bdata_compare.py  event_analytics.py  meta_analytics.py  (+2 more)
src/: main.cpp
tests/: battle_data_test.cpp
(+1092 files in other folders)
